kube-practice/examples/ingress-controller/ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: critical-space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: "/pay"
        pathType: Prefix
        backend:
          service:
            name: pay-service
            port: 
              number: 8282
