kube-practice/examples/ingress-controller/ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
  - host: wear.my-online-store.com
  - http:
      paths:
      - path: /wear
        backend:
          serviceName: wear-service
          servicePort: 80
  - host: wear.my-online-store.com
  - path: /watch
    backend:
      serviceName: watch-service
      servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
  - http:
      paths:
      - path: /wear
        backend:
          serviceName: wear-service
          servicePort: 80
      - path: /watch
        backend:
          serviceName: watch-service
          servicePort: 80
